2_aws_vpc.tf
/*resource "aws_internet_gateway" "default" {*/
  /*vpc_id = "${aws_vpc.default.id}"*/
/*}*/

/*resource "aws_vpc" "default" {*/
  /*cidr_block = "10.0.0.0/16"*/
  /*enable_dns_hostnames = true*/
  /*tags {*/
    /*Name = "KCDC Demo VPC"*/
  /*}*/
/*}*/
