5_security_groups.tf
/*resource "aws_security_group" "node" {*/
  /*name = "kcdc-node-sg"*/
  /*description = "Default security group that allows SSH inbound and all outbound traffic from all instances in the VPC"*/
  /*vpc_id = "${aws_vpc.default.id}"*/

  /*ingress {*/
    /*from_port   = "22"*/
    /*to_port     = "22"*/
    /*protocol    = "tcp"*/
    /*self        = true*/
  /*}*/

  /*egress {*/
    /*from_port = "0"*/
    /*to_port = "0"*/
    /*protocol = "-1"*/
    /*cidr_blocks = ["0.0.0.0/0"]*/
  /*}*/

  /*tags {*/
    /*Name = "kcdc-node-sg"*/
  /*}*/
/*}*/

/*resource "aws_security_group" "nat" {*/
  /*name = "kcdc-nat-sg"*/
  /*description = "Security group for nat instances that allow SSH traffic from internet"*/
  /*vpc_id = "${aws_vpc.default.id}"*/

  /*ingress {*/
    /*from_port = 22*/
    /*to_port   = 22*/
    /*protocol  = "tcp"*/
    /*cidr_blocks = ["0.0.0.0/0"]*/
  /*}*/

  /*ingress {*/
    /*from_port = 80*/
    /*to_port   = 80*/
    /*protocol  = "tcp"*/
    /*cidr_blocks = ["0.0.0.0/0"]*/
  /*}*/

  /*ingress {*/
    /*from_port = 443*/
    /*to_port   = 443*/
    /*protocol  = "tcp"*/
    /*cidr_blocks = ["0.0.0.0/0"]*/
  /*}*/

  /*egress {*/
    /*from_port = "0"*/
    /*to_port = "0"*/
    /*protocol = "-1"*/
    /*cidr_blocks = ["0.0.0.0/0"]*/
  /*}*/

  /*tags {*/
    /*Name = "kcdc-nat-sg"*/
  /*}*/
/*}*/
